# dissertacao

./: BO_optimization.ipynb  BO_torch_tutorial.ipynb  README.md  automation_audit.py  benchmark_teorethical_equation.ipynb  modeling_benchmark.ipynb
Check_paper/: Report.xlsx  resultados_report_forca.rpt.txt
DataGeneration/: Tabela_de_materiais.xlsx  automation_audit_conclusao.py  create_new_materials.py  data_to_modeling.csv  histograma_cutting_force.csv  report_automat.py
DataGeneration/resultados/: dados_automation_2024-05-21_01-30.csv  dados_automation_2024-08-17_16-45.csv  dados_automation_2024-08-19_08-47.csv  dados_automation_2024-08-19_09-36.csv  (+3 more)
DataPreparation/: data_prep_segunda_rodada_v1.ipynb  data_prep_segunda_rodada_v1_conclusao.ipynb
Modeling/: BO_optimization.ipynb  gradient_optimization_upon_ML.ipynb  modeling_benchmark.ipynb  modeling_benchmark_v2.ipynb
Modeling/agent_AI/projeto_1/: README.md  pyproject.toml  report.md  summary.md  trained_agents_data.pkl  training_data.pkl
Modeling/agent_AI/projeto_1/src/projeto_1/: crew.py  main.py
Modeling/agent_AI/projeto_1/src/projeto_1/config/: agents.yaml  tasks.yaml
Modeling/agent_AI/projeto_1/tests/: crewai_teste.ipynb
Optimization/: Brute_force_optmization.ipynb  gradient_optimization_upon_ML.ipynb
data_gen/: Materials.csv  aisi52100_rake  automation_audit.py  dados_automation_2022-12-26_17-44.csv  dados_automation_2023-01-12_09-40.csv  dados_automation_2023-02-05_21-52.csv  dados_automation_2023-06-18_22-51.csv  data_prep.ipynb  data_to_modeling.csv  data_to_modeling_v0.csv  modeling.ipynb
(+20 files in other folders)
